--- a/.scribe/endpoints/00.yaml
+++ b/.scribe/endpoints/00.yaml
@@ -171,13 +171,13 @@ endpoints:
         name: id
         description: 'The ID of the post.'
         required: true
-        example: asperiores
+        example: quibusdam
         type: string
         enumValues: []
         exampleWasSpecified: false
         custom: []
     cleanUrlParameters:
-      id: asperiores
+      id: quibusdam
     queryParameters: []
     cleanQueryParameters: []
     bodyParameters: []
@@ -220,13 +220,13 @@ endpoints:
         name: id
         description: 'The ID of the post.'
         required: true
-        example: possimus
+        example: voluptatem
         type: string
         enumValues: []
         exampleWasSpecified: false
         custom: []
     cleanUrlParameters:
-      id: possimus
+      id: voluptatem
     queryParameters: []
     cleanQueryParameters: []
     bodyParameters: []
@@ -260,13 +260,13 @@ endpoints:
         name: id
         description: 'The ID of the post.'
         required: true
-        example: voluptas
+        example: fugit
         type: string
         enumValues: []
         exampleWasSpecified: false
         custom: []
     cleanUrlParameters:
-      id: voluptas
+      id: fugit
     queryParameters: []
     cleanQueryParameters: []
     bodyParameters: []
@@ -369,13 +369,13 @@ endpoints:
         name: id
         description: 'The ID of the post.'
         required: true
-        example: a
+        example: laborum
         type: string
         enumValues: []
         exampleWasSpecified: false
         custom: []
     cleanUrlParameters:
-      id: a
+      id: laborum
     queryParameters: []
     cleanQueryParameters: []
     bodyParameters: []
@@ -418,13 +418,13 @@ endpoints:
         name: id
         description: 'The ID of the post.'
         required: true
-        example: quas
+        example: quibusdam
         type: string
         enumValues: []
         exampleWasSpecified: false
         custom: []
     cleanUrlParameters:
-      id: quas
+      id: quibusdam
     queryParameters: []
     cleanQueryParameters: []
     bodyParameters: []
@@ -458,13 +458,13 @@ endpoints:
         name: id
         description: 'The ID of the post.'
         required: true
-        example: odit
+        example: non
         type: string
         enumValues: []
         exampleWasSpecified: false
         custom: []
     cleanUrlParameters:
-      id: odit
+      id: non
     queryParameters: []
     cleanQueryParameters: []
     bodyParameters: []
@@ -616,13 +616,13 @@ endpoints:
         name: id
         description: 'The ID of the post.'
         required: true
-        example: quia
+        example: aut
         type: string
         enumValues: []
         exampleWasSpecified: false
         custom: []
     cleanUrlParameters:
-      id: quia
+      id: aut
     queryParameters: []
     cleanQueryParameters: []
     bodyParameters: []
@@ -656,13 +656,13 @@ endpoints:
         name: id
         description: 'The ID of the post.'
         required: true
-        example: eos
+        example: voluptatem
         type: string
         enumValues: []
         exampleWasSpecified: false
         custom: []
     cleanUrlParameters:
-      id: eos
+      id: voluptatem
     queryParameters: []
     cleanQueryParameters: []
     bodyParameters: []
